--- a/templates/forsale.html
+++ b/templates/forsale.html
@@ -9,7 +9,7 @@
                 <select required name="menu-category">
                     <option value="none">Choose One</option>
                     {% for category in ['food','clothing','shoes','services','utility',
-            'makeup','bath/body','event','other'] %}
+            'makeup','textbooks','bath-body','event','other'] %}
                         <option value={{category}}>{{category}}</option>
                     {% endfor %}
                 </select>
@@ -39,7 +39,7 @@
                 <td>{{item.price}}</td>
                 <td>{{item.availability}}</td>
                 <td>{{item.urgency}}</td>
-                <td>{{item.photo}}</td>
+                <td><img src="{{url_for('blob',iid=item.iid)}}"></td>
                 <td>{{item.dorm}}</td>
                 <td>{{item.other}}</td>
                 <td>
