--- a/templates/main.html
+++ b/templates/main.html
@@ -82,7 +82,7 @@ posts" name="searchterm" aria-label="Search">
 <form id="account" method="GET" action="{{url_for('uploadPost')}}">
         <button id="upload" type="submit" name="submit" value="upload"> Upload Item </button> 
 </form>
-</div></span>
+</div>
 {% endblock %}
 
 {% block content %}
