--- a/templates/search.html
+++ b/templates/search.html
@@ -3,6 +3,15 @@
 {% block htmlTop %}
     {{super()}}
 {% endblock %}
+
+{% block buttons %}
+{{super()}}
+{% endblock %}
+
+{% block content %}
+  {{super()}}
+{% endblock %}
+
  {% block head %}<h1>{{category}}</h1>{% endblock %} 
  
  {% block sale %}
