--- a/templates/forsale.html
+++ b/templates/forsale.html
@@ -11,17 +11,7 @@
          <!--{% block head %}Select Category{% endblock %} -->
          
          {% block content %}
-            <form method="post" action="{{url_for('search')}}">
-                <label for="menu-category">Search from Categories:</label> 
-                <select required name="menu-category">
-                    <option value="none">Choose One</option>
-                    {% for category in ['food','clothing','shoes','services','utility',
-            'makeup','textbooks','bath-body','event','other'] %}
-                        <option value={{category}}>{{category}}</option>
-                    {% endfor %}
-                </select>
-                <input type="submit" name="submit" value="Choose" method="POST"/>
-            </form>
+            {{super()}}
          {% endblock %}
          {% block sale %}
          {{super()}}
