--- a/templates/main.html
+++ b/templates/main.html
@@ -60,9 +60,7 @@
     </div>
 {% block buttons %}
 <!--<p>Logged in as: {{username}}</p>-->
-
 <div class="btn-group justify-content-between">
-    
     <form class="form-inline" id="search" method="POST" action="{{url_for('stringSearch')}}">
         <input class="form-control mr-sm-2" id="searchterm" placeholder="Search posts"
         name="searchterm" aria-label="Search">
@@ -81,8 +79,20 @@
 </div>
 {% endblock %}
 
-{% block content %}
-    {% endblock %}
+ {% block content %}
+            <form method="post" action="{{url_for('search')}}">
+                <label for="menu-category">Search from Categories:</label> 
+                <select required name="menu-category">
+                    <option value="none">Choose One</option>
+                    {% for category in ['food','clothing','shoes','services','utility',
+            'makeup','textbooks','bath-body','event','other'] %}
+                        <option value={{category}}>{{category}}</option>
+                    {% endfor %}
+                </select>
+                <input type="submit" name="submit" value="Choose" method="POST"/>
+            </form>
+{% endblock %}
+
 {% block sale %}
     <h1>Items for Sale</h1>
 
