--- a/templates/main.html
+++ b/templates/main.html
@@ -33,6 +33,9 @@
         <a class="nav-link" href="{{url_for('getSalePosts')}}">Items For Sale</a>
       </li>
      
+     <li class="nav-item">
+        <a class="nav-link" href="{{url_for('getBuyPosts')}}">Items Requested</a>
+      </li>
     </ul>
     <span class="navbar-text">
     <nav class="navbar navbar-light bg-light">
