--- a/templates/form.html
+++ b/templates/form.html
@@ -25,6 +25,9 @@
     <h1>Welcome!</h1>
     {% endblock %}
     
+    {% block content%}
+    {%endblock%}
+    
     {% block sale %}
     <!-- Upload form that takes all the necessary information for a post 
     and sends it to the backend, items table -->
