--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,7 @@
     
         {% block css %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="">BuyMe</a>
+  <a class="navbar-brand" href="{{url_for('home')}}">BuyMe</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
