--- a/templates/form.html
+++ b/templates/form.html
@@ -66,7 +66,7 @@
             <label for="other">Other</label>
             <input type="radio" name="category" value="other"><input type="text" name="other" value=""><br></p>
         
-        <p><label for="pic">Photo: <br> <input type="file" name="pic"></label></p>
+        <p><label for="pic">Photo: (260kB and below)<br> <input type="file" name="pic"></label></p>
         <p><label>Role <br><select name="role">
           <option value="seller">Seller</option>
           <option value="buyer">Buyer</option>
