--- a/templates/account.html
+++ b/templates/account.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta name=author content="">
     <title>Registration</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
 </head>
 <body>
@@ -12,14 +13,15 @@
         <button id="homebutton" type="submit" name="submit" value="home"> Go to home page </button> 
 </form>
 <h2>User Information</h2>
-<table id="user">
+<table class="table table-hover" id="user">
+   <thead class="thead-light">
   <tr>
     <th>Username</th>
     <th>Name</th>
     <th>Graduation Year</th>
     <th>Dorm location</th>
     <th>Email</th>
-  </tr>
+  </tr></thead>
   <tr>
     <td>{{person.username}}</td>
     <td>{{person.name}}</td>
@@ -30,7 +32,8 @@
 </table>
 
 <h2>Available Posts</h2>
-<table id="myAvailablePosts">
+<table class="table table-hover" id="myAvailablePosts">
+  <thead class="thead-light">
   <tr>
     <th>Description</th>
     <th>Price</th>
@@ -38,6 +41,7 @@
     <th>Other</th>
     <th>Photo</th>
   </tr>
+  </thead>
   {% for post in availablePosts %}
   <tr class="post" data-iid="{{post.iid}}">
     <td class="description">{{post.description}}</td>
@@ -67,14 +71,15 @@
 </table>
 
 <h2>Sold Posts</h2>
-<table id="mySoldPosts">
+<table class="table table-hover" id="mySoldPosts">
+  <thead class="thead-light">
   <tr>
     <th>Description</th>
     <th>Price</th>
     <th>Category</th>
     <th>Other</th>
     <th>Photo</th>
-  </tr>
+  </tr></thead>
   {% for post in soldPosts %}
   <tr class="post" data-iid="{{post.iid}}">
     <td class="description">{{post.description}}</td>
@@ -92,12 +97,13 @@
 
 <div id="messages">
 <h3>Items I'm interested in</h3>
-<table id="itemsToBuyMessages">
+<table class="table table-hover" id="itemsToBuyMessages">
+  <thead class="thead-light">
   <tr>
     <th>Conversation with</th>
     <th>Item</th>
     <th>Message</th>
-  </tr>
+  </tr></thead>
   {% for message in itemsToBuyMessages %}
   <tr data-uid={{message.uid}} data-iid={{message.iid}}>
     <td class="sender"><a href="{{url_for('account',usernameInput=message.username)}}">{{message.username}}</td>
@@ -112,12 +118,13 @@
 </table>
 
 <h3>Items I'm selling</h3>
-<table id="itemsToSellMessages">
+<table class="table table-hover" id="itemsToSellMessages">
+  <thead class="thead-light">
   <tr>
     <th>Conversation with</th>
     <th>Item</th>
     <th>Message</th>
-  </tr>
+  </tr></thead>
   {% for message in itemsToSellMessages %}
   <tr data-uid={{message.uid}} data-iid={{message.iid}}>
     <td class="sender"><a href="{{url_for('account',usernameInput=message.username)}}">{{message.username}}</td>
@@ -239,11 +246,9 @@ $('#myAvailablePosts').on('click','.markSold',function(){
 $('#updateButton').click(function(){
   var iid = $('#updateDialog').data('iid');
   var description = sanitize($('#description').val());
-  var price = sanitize($('#price').val());
+  var price = $('#price').val();
   var category = $("input[name=category]:checked").val();
-  console.log(category);
   var otherDesc = sanitize($('#otherDesc').val());
-  console.log(otherDesc);
   $.post("{{url_for('updatePost')}}",
             {'description':description, 'price': price,'category':category,
             'otherDesc':otherDesc,'iid':iid}, 
@@ -281,18 +286,10 @@ function deletePostRow(obj) {
 function updatePostInfo(obj) {
   var iid = obj['iid'];
   var post = $("[data-iid='" + iid + "']");
-  if (obj['description']) {
-    post.find('.description').text(obj['description']);
-  }
-  if (obj['price']){
-    post.find('.price').text(obj['price']);
-  }
-  if (obj['category']){
-    post.find('.category').text(obj['category']);
-  }
-  if (obj['otherDesc']){
-    post.find('.otherDesc').text(obj['otherDesc']);
-  }
+  post.closest('tr').find('.description').val(obj['description']);
+  post.closest('tr').find('.price').val(obj['price']);
+  post.closest('tr').find('.category').val(obj['category']);
+  post.closest('tr').find('.other').val(obj['other']);
 }
 
 function fillDialogForm(obj){
