--- a/templates/form.html
+++ b/templates/form.html
@@ -71,7 +71,7 @@
           <option value="seller">Seller</option>
           <option value="buyer">Buyer</option>
         </select></label></p>
-        <p><button type="submit">Submit</button></p>
+        <p><button id="submit" type="submit">Submit</button></p>
     </form>
     <script src="https://code.jquery.com/jquery.js"></script>
     {% endblock %}
