--- a/templates/search.html
+++ b/templates/search.html
@@ -11,9 +11,16 @@
 {% block content %}
   {{super()}}
 {% endblock %}
-
- {% block head %}<h1>{{category}}</h1>{% endblock %} 
  
+{% block head %}
+    {% if category != '' %}
+        <h1>{{category}}</h1>
+    {% endif %}
+    {% if category == '' %}
+    {{super()}}
+    {% endif %}
+{% endblock %}
+
  {% block sale %}
    {{super()}}
  {% endblock %}
