--- a/templates/main.html
+++ b/templates/main.html
@@ -83,7 +83,19 @@
 
  {% block content %}
             <form method="post" action="{{url_for('getSalePosts')}}">
-                <label for="menu-category">Search from Categories:</label> 
+                <label for="menu-category">Search from Categories (items for sale):</label> 
+                <select required name="menu-category">
+                    <option value="none">Choose One</option>
+                    {% for category in ['food','clothing','shoes','services','utility',
+            'makeup','textbooks','bath-body','event','other'] %}
+                        <option value={{category}}>{{category}}</option>
+                    {% endfor %}
+                </select>
+                <input type="submit" name="submit" value="Choose" method="POST"/>
+            </form>
+            <br>
+            <form method="post" action="{{url_for('getBuyPosts')}}">
+                <label for="menu-category">Search from Categories (items requested):</label> 
                 <select required name="menu-category">
                     <option value="none">Choose One</option>
                     {% for category in ['food','clothing','shoes','services','utility',
