--- a/templates/main.html
+++ b/templates/main.html
@@ -50,7 +50,7 @@
     </div>
     </nav>
     {% endblock %}
-    <title>BuyMe homepage</title>
+    <title>BuyMe</title>
      <div id="flashes">{% block flashes %}
    {% with messages = get_flashed_messages() %}
     {% if messages %}
