fixed bug for messages, got rid of submit tag on buttons, added css for dialog boxes, added comments for javascript code

--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,16 @@ img {
     height: auto;
 }
 
-#messageBody,
-#reply {
-    width: 600px;
+#messageBody, #reply {
+    width: 480px;
+    max-width: 480px;
+}
+
+#conversation td,th {
+    padding: 16px;
+    border-bottom: 1px solid #ddd;
+}
+
+#conversation .header {
+    background-color: #d3d3d3;
 }
